--- a/Работа.Rmd
+++ b/Работа.Rmd
@@ -6,19 +6,46 @@ output: html_document
 ---
 
 ```{r}
-library('rio')
 library(DescTools)
 library(EnvStats)
 library(outliers)
-data_raw <- read.csv('data.csv')
-data_raw
+library(ggplot2)
+library(ggpubr)
+library(Hmisc)
+library(corrplot)
+library(rio)
+library(robustHD)
+library(normtest)
+library(GGally)
+library(leaps)
+library(tidyr)
+library(sjPlot)
+library(dplyr)
+
+data <- read.csv('datas1.csv')
+data <- data[rowSums(is.na(data)) == 0,]
+data <- select(data, -X)
+data <- select(data, -sl_no)
+data
 ```
 
 ```{r}
-data <- data_raw[c('Country.name', 'Regional.indicator', 'Ladder.score', 'Logged.GDP.per.capita', 'Social.support', 'Healthy.life.expectancy', 'Freedom.to.make.life.choices', 'Generosity', 'Perceptions.of.corruption')]
 Desc(data)
 ```
+Выделим данные объясняющей переменной
 ```{r}
-summary(data)
+data_cont <- select(data, -salary)
+summaryStats(data_cont)
 ```
+Присвоим целевое целевое значение переменной Y
+```{r}
+Y <- data$salary
+Desc(Y)
+```
+## Проверка IQR
+
+```{r}
+IQR(Y)/2/median(Y)
+```
+Данные однородны
 
